bitbybit-tests/tests/ui/overlapping_ranges.stderr
error: custom attribute panicked
 --> tests/ui/overlapping_ranges.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: one or more value in range 0x20..=0x20 is covered by multiple variants
